What's NEW for marx 4.4.0?

* Vignetting by the HRMA support structs has been added.

* The marx calibration files have been update to be consistent with
  CALDB 4.1.1.  In particular, the HETG efficiency file was updated to
  hetgD1996-11-01greffpr001N0006.fits, and the HRMA on axis effective
  has been recalibrated to agree with hrmaD1996-12-20axeffaN0008.fits.

* The handling of the marx.par file has been changed.  The input
  marx.par file is now regarded as read-only and its contents will not
  be modified.  Instead, all parameter values, including those that
  are hidden (mode="h") are written to the marx.par file in the output
  directory.  Previously, unless a hidden parameter was marked to be
  "learned" (mode="hl"), the value used for the simulation was not
  reflected in the output marx.par file.
  
* It was discovered that in interpreting the acis response FEF, marx
  was using standard normalized gaussians, whereas mkrmf uses
  unnormalized gaussians.  This difference caused the marx response to
  be different away from the main peak from that of the RMF generated
  by mkrmf.  Marx 4.4.0 now uses the unnormalized form to be
  consistent with mkrmf.

What's NEW for marx 4.3.0?

* `make install` installs marx in a more traditional unix manner.  See
   the INSTALL file for more details.

* Updated the ACIS QE and Aimpoint files to match those of the latest CALDB.

* Added large file support to allow the creation of files exceeding 2 GB.

* Marx has been ported to MacOSX and Cygwin.  There were mixed results
  with these platforms in previous versions.  4.3.0 is the first version of 
  marx to officially support these systems.

* The `pileup` program has been renamed `marxpileup`.